--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3-1/int05-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3-1/int05-3-1.component.html
@@ -88,7 +88,7 @@
 
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button" (click)="addData()">
+            <button class="ui mini green button" (click)="addData()">
               <i class="add icon"></i>
               เพิ่มข้อมูล
             </button>
@@ -128,8 +128,8 @@
       <br>
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="deleteData()">
-            <i class="trash icon"></i>
+          <button class="ui mini red button" (click)="deleteData()">
+            <i class="trash alternate icon"></i>
             ลบ
           </button>
           <button class="ui mini primary button" (click)="processCheckData()">
