--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
@@ -24,12 +24,12 @@
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
 
-            <button class="ui mini primary button" (click)="onUpload($event)">
+            <button class="ui mini yellow button" (click)="onUpload($event)">
               <i class="upload icon"></i>
               อัพโหลด
             </button>
-            <button class="ui mini button" (click)="clearFile()">
-              <i class="trash icon"></i>
+            <button class="ui mini red button" (click)="clearFile()">
+              <i class="trash alternate icon"></i>
               ลบไฟล์
             </button>
 
