--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4-admin/int05-4-admin.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4-admin/int05-4-admin.component.html
@@ -1,8 +1,6 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">รายงานผลการจัดซื้อจัดจ้าง</h2>
-
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>ค้นหาข้อมูลการจัดซื้อจัดจ้าง</span>
@@ -125,12 +123,12 @@
 
                 <div class="ui center aligned grid" style="margin-top: 20px;">
                     <div class="sixteen wide column">
-                        <button class="ui small primary button" (click)="uploadFile()">
+                        <button class="ui mini primary button" (click)="uploadFile()">
                           <i class="search icon"></i> ค้นหา
                         </button>
 
-                        <button class="ui small button" (click)="clearFile()">
-                          <i class="close icon"></i> ล้างข้อมูล
+                        <button class="ui mini button" (click)="clearFile()">
+                          <i class="sync icon"></i> ล้างข้อมูล
                         </button>
                     </div>
                 </div>
