--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
@@ -1,7 +1,6 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">{{head}}ข้อมูลจัดซื้อจัดจ้าง</h2>
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>รายละเอียดโครงการ</span>
@@ -426,7 +425,7 @@
                     </div>
                 </div>
 
-                <button class="ui tiny green button" type="submit">
+                <button class="ui mini tiny primary button" type="submit">
                     <i class="save icon"></i> บันทึก
             </button>
             </form>
@@ -692,7 +691,7 @@
                     </div>
                 </div>
 
-                <button class="ui tiny green button" type="submit">
+                <button class="ui mini tiny primary button" type="submit">
                     <i class="save icon"></i> บันทึก
             </button>
             </form>
@@ -957,7 +956,7 @@
                     </div>
                 </div>
 
-                <button class="ui tiny green button" type="submit">
+                <button class="ui mini tiny primary button" type="submit">
                     <i class="save icon"></i> บันทึก
             </button>
             </form>
