--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3-3/int05-3-3-1/int05-3-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3-3/int05-3-3-1/int05-3-3-1.component.html
@@ -309,9 +309,8 @@
         <div class="inline fields"></div>
         <div class="inline field ui grid">
           <div class="sixteen wide center aligned column">
-            <button class="ui button primary" type="button" (click)="addAction()">บันทึก</button>
-
-            <button class="ui button primary" type="button" (click)="cancel()">ยกเลิก</button>
+            <button class="ui mini button primary" type="button" (click)="addAction()"><i class="save icon"></i>บันทึก</button>
+            <button class="ui mini button" type="button" (click)="cancel()"><i class="close icon"></i>ยกเลิก</button>
           </div>
         </div>
       </div>
@@ -383,9 +382,8 @@
         <div class="inline fields"></div>
         <div class="inline field ui grid">
           <div class="sixteen wide center aligned column">
-            <button class="ui button primary" type="button" (click)="addAssetMaintenanceAction()">บันทึก</button>
-
-            <button class="ui button primary" type="button" (click)="cancel()">ยกเลิก</button>
+            <button class="ui mini button primary" type="button" (click)="addAssetMaintenanceAction()"><i class="save icon"></i>บันทึก</button>
+            <button class="ui mini button " type="button" (click)="cancel()"><i class="close icon"></i>ยกเลิก</button>
           </div>
         </div>
       </div>
