--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -60,7 +60,7 @@
 </div>
 <!-- form search -->
 <div class="ui segment {{loading ? 'loading' : ''}}">
-    <table id="dataTable" class="ui small celled table nowrap striped selectable " style="width: 100%">
+    <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
         <thead>
           <tr>
             <th rowspan="2" style="text-align: center !important;">
